# ROS2_braccio

./: LICENSE  README.md
braccio_ROS_Arduino/: ROSBraccio.cpp  ROSBraccio.h  braccio_ROS_Arduino.ino
braccio_bringup/: CMakeLists.txt  package.xml
braccio_bringup/braccio_bringup/: __init__.py  launch_mixin.py
braccio_bringup/config/: config.rviz
braccio_bringup/launch/: bringup.launch.py  gazebo_sim.launch.py  move_group.launch.py  real.launch.py  sim.launch.py
braccio_description/: CMakeLists.txt  package.xml
braccio_description/braccio_description/: __init__.py  launch_mixin.py
braccio_description/gazebo/: braccio.gazebo.xacro
braccio_description/launch/: view_robot.launch.py
braccio_description/meshes/collision/: finger_aux.stl  finger_collision.stl  link_1.stl  link_4.stl
braccio_description/meshes/visual/: base_link.stl  finger.stl  link_2.stl  link_5.stl
braccio_description/ros2_control/: braccio.ros2_control.xacro
braccio_description/urdf/: braccio.urdf.xacro  braccio_description.urdf.xacro  materials.urdf.xacro
braccio_hardware/: CMakeLists.txt  braccio_hardware.xml  package.xml
braccio_hardware/braccio_hardware/: __init__.py  launch_mixin.py
braccio_hardware/config/: braccio_controllers.yml
braccio_hardware/include/braccio_hardware/: arduino_comms.hpp  braccio_hardware.hpp  hardware.hpp  visibility_control.hpp
braccio_hardware/launch/: braccio_hardware.launch.py
braccio_hardware/src/: braccio_hardware.cpp
braccio_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
braccio_moveit_config/config/: braccio.srdf  braccio.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
